--- a/calander/calStyle.css
+++ b/calander/calStyle.css
@@ -2,18 +2,16 @@ h2 {
   text-align: center;
 }
 
-table,
-th,
-td {
-  border: solid 1px black;
-}
-
-table {
+.calendar-container, .menu-container {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
-  border-collapse: collapse;
 }
 
-th {
-  height: 25px;
+div>h3, div>p {
+  width: 20%;
   text-align: center;
+  border: solid 2px white;
+  margin: 0px;
+  padding: 5px;
 }
