--- a/home/homeStyle.css
+++ b/home/homeStyle.css
@@ -27,3 +27,10 @@ footer {
   display: flex;
   justify-content: flex-end;
 }
+
+.error {
+  background: orangered;
+  color: #fff;
+  padding: 5px;
+  margin: 5px;
+}
