--- a/home/homeStyle.css
+++ b/home/homeStyle.css
@@ -21,20 +21,24 @@ h1,
 h3 {
   color: var(--green);
   text-align: center;
-  line-height: 2.2rem;
+  line-height: 125%;
+  text-shadow: 1px 1px 2px rgba(10, 30, 40, .7);
   /* -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: var(--sapphire);
   -webkit-text-stroke: inset; */
 
 }
 h1 {
-  font-size: 3.5rem;
+  font-size: 3.9rem;
   font-weight: 800;
 }
 h3 {
   margin-bottom: 40px;
   font-weight: 800;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
+}
+.subtitle {
+  text-indent: 15px ;
 }
 .user-entry {
   border: 1px white solid;
@@ -48,6 +52,11 @@ h3 {
 .user-entry h2 {
   font-family: var(--mainfont);
   font-weight: 700;
+}
+.user-entry h3 {
+  font-family: var(--mainfont);
+  margin-bottom: 5px;
+  color: var(--onyx);
 }
 form {
   display: flex;
