--- a/calendar/calStyle.css
+++ b/calendar/calStyle.css
@@ -4,25 +4,33 @@ body {
 --carrot: #F18F01;
 --lightblue: #ADCAD6;
 --onyx: #393E41;
-
---headerfont: 'Potta One', cursive;
---mainfont: 'Open Sans', sans-serif;
 }
 
 h2 {
   text-align: center;
   font-weight: bold;
-  margin-bottom: var(--gutter);
+  margin-bottom: 3rem;
+  line-height: 2.5rem;
+  font-style: italic;
+  max-width: 600px;
+  height: 3rem;
 }
 
 .calendar-container, .menu-container {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  width: 100%;
+  width: 80%;
 }
 
 div>h3 {
+  display: flex;
+  font-size: 1.5rem;
+  background-color: var(--sapphire);
+  color: white;
+  height: 3rem;
+  align-items: center;
+  justify-content: center;
   }
 
 div>h3, div>p {
@@ -41,9 +49,11 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
-  height: fit-content;
-  padding: 10px;
+  width: 80%;
+  max-width: 600px;
+  height: auto;
+  justify-content: center;
+  position: relative;
 }
 
 .rendered-recipe-title {
@@ -60,6 +70,7 @@ button {
 }
 
 .step-number, div>button {
+  margin-left: 20px;
   display: flex;
   height: 50px;
   width: 50px;
@@ -72,7 +83,12 @@ button {
   border: solid white 1px;
   color: white;
   margin-right: 10px;
-  margin-top: 10px;
+}
+
+div>button {
+  position: absolute;
+  top: -20px;
+  right: 5px;
 }
 
 h2 {
@@ -94,4 +110,8 @@ section {
 
 .step-container {
   display: flex;
+}
+
+p {
+  padding: 0px;
 }
