--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,36 @@ body {
   align-items: center;
   justify-content: center;
 }
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+header h1 {
+
+  font-size: 2rem;
+
+}
+header h1,
+header h3 {
+  color: var(--green);
+  line-height: 120%;
+  font-weight: 900;
+}
+header div h3 {
+  width: 100%;
+  padding: 0;
+}
+nav {
+
+}
+nav a{
+  text-decoration: none;
+  margin-right: 15px;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
 
 h1,
 h2,
