--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,15 @@ nav a{
   font-size: 1.2rem;
   font-weight: 800;
   font-family: var(--headerfont);
+  color: var(--onyx);
 }
+nav a:visited {
+  
+}
+nav a:hover {
+  color: var(--sapphire);
+}
+
 
 h1,
 h2,
