last commit of the night

--- a/calendar/calStyle.css
+++ b/calendar/calStyle.css
@@ -4,15 +4,23 @@ body {
 --carrot: #F18F01;
 --lightblue: #ADCAD6;
 --onyx: #393E41;
+/* background-image: url(../assets/sauce-page.jpg);
+background-size: 300px 300px;
+background-blend-mode: lighten; */
 }
 
-h2 {
+header {
+  background-color: white;
+}
+
+#welcome {
   text-align: center;
   font-weight: bold;
-  margin-bottom: 3rem;
+  margin-bottom: 6rem;
+  font-size: 1.75rem;
   line-height: 2.5rem;
   font-style: italic;
-  max-width: 600px;
+  max-width: 400px;
   height: 3rem;
 }
 
@@ -23,17 +31,17 @@ h2 {
   width: 80%;
 }
 
-div>h3 {
+div>h4 {
   display: flex;
   font-size: 1.5rem;
-  background-color: var(--sapphire);
+  background-color: var(--carrot);
   color: white;
   height: 3rem;
   align-items: center;
   justify-content: center;
   }
 
-div>h3, div>p {
+div>h4, div>p {
   width: 20%;
   text-align: center;
   border: solid 2px white;
