--- a/sauce/sauceStyle.css
+++ b/sauce/sauceStyle.css
@@ -20,16 +20,7 @@ h2 {
   color: var(--green);
 }
 
-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 h1 {
-  border: 2px solid var(--sapphire);
-  border-radius: 5px;
-  width: 300px;
   height: fit-content;
   text-align: center;
   background-color: white;
@@ -47,12 +38,15 @@ p {
   font-size: 14px;
 }
 
-.recipe-title {
+.recipe-title h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 400px;
+  border: solid 2px var(--green);
 }
 
+.recipe-title,
 .outer-div {
   display: flex;
   justify-content: center;
@@ -62,4 +56,50 @@ p {
 body {
   background-image: url('../assets/sauce-page.jpg');
   background-size: 300px 300px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  margin-bottom: 5px;
+  background-color: white;
+}
+
+header h1 {
+  font-size: 1.8rem;
+}
+
+header h1,
+header h3 {
+  color: var(--green);
+  line-height: 20%;
+  font-weight: 900;
+  justify-content: right;
+}
+
+header div h3 {
+  width: 100%;
+  padding: 0;
+}
+
+nav a {
+  text-decoration: none;
+  margin-right: 15px;
+  font-size: 1.2rem;
+  font-weight: 800;
+  font-family: var(--headerfont);
+  color: var(--onyx);
+}
+
+nav a:visited {
+}
+
+nav a:hover {
+  color: var(--sapphire);
+}
+
+div.logo {
+  line-height: 10px;
 }
