--- a/sauce/sauceStyle.css
+++ b/sauce/sauceStyle.css
@@ -1,3 +1,9 @@
+body {
+  margin-top: 0;
+  background-image: url('../assets/sauce-page.jpg');
+  background-size: 300px 300px;
+}
+
 .sauce-box {
   padding: 5px;
   display: flex;
@@ -10,7 +16,7 @@
   text-align: center;
   border-radius: 5px;
   margin: 4px;
-  box-shadow: 1px 2px 9px var(--lightblue);
+  box-shadow: 1px 2px 4px var(--sapphire);
   background-color: white;
 }
 
@@ -53,11 +59,6 @@ p {
   flex-wrap: wrap;
 }
 
-body {
-  background-image: url('../assets/sauce-page.jpg');
-  background-size: 300px 300px;
-}
-
 header {
   display: flex;
   justify-content: space-between;
@@ -65,6 +66,7 @@ header {
   padding: 5px;
   margin-bottom: 5px;
   background-color: white;
+  width: 100%;
 }
 
 header h1 {
