--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -1,25 +1,50 @@
 body {
     display: inline;
     box-sizing: content-box;
-    color: var(--onyx)
+    color: var(--onyx);
+    line-height: 1.5rem;
 }
 
 main {
     background-attachment: fixed;
-    background-image: '../assets';
+    height:100vh;
+    background-image: url('../assets/sauce-page.jpg');
+    background-size: 300px 300px;
+}
+
+main::-webkit-scrollbar {
+    display: none;
 }
 
 header h1,
 header h3 {
     margin:0;
 }
+
+button {
+    background: linear-gradient(#f1c787, #f18f01);
+    color: #ffffff;
+    border: none;
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 6px;
+    cursor: pointer;
+    }
+
+button:hover {
+    color: #f4f4f4;
+    background: linear-gradient(#9ed2e9, #006e90);
+}
+
 .main-section {
     display: flex;
     width: 90vw;
     height: 100vh;
-    justify-content: space-evenly;
+    margin: auto;
     background-color: transparent;
-    padding: 0%;
+    padding: auto;
+    position: relative;
+    background-attachment: fixed;
 }
 
 .calendar-button-div {
@@ -33,8 +58,11 @@ header h3 {
 }
 
 #calendar-button {
-    align-items: b;
+    position: absolute;
+    left: 84%;
+    top: 8%;
 }
+
 #batch-recipe-container-div {
     margin-right: 10px;
     display: flex;
@@ -43,14 +71,18 @@ header h3 {
     width: 50vw;; 
     overflow: scroll;
     scrollbar-color: none;
-    max-width: 600px;
-    border: 10px solid  var(--green) ;
+    min-width: 30%;
+    max-width: 40%;
+    border: 3px solid  var(--green) ;
     border-radius: 50px;
+    position: absolute;
+    left: 1%;
+    top: 5.5%;
+    background-color: rgba(223, 223, 223, 0.5);
+    padding-bottom: 5%;
 }
 
-#batch-recipe-container-div::-webkit-scrollbar {
-    display: none;
-}
+
 
 .single-recipe-div {
     height: auto;
@@ -59,8 +91,8 @@ header h3 {
     padding: 1rem;
     margin: 1rem;
     border-radius: 10px;
-    background-color: rgba(250, 240, 225, 0.424);
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    background-color: rgba(250, 240, 225, 0.9);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
 }
 
 .pre-cooked-image {
@@ -68,6 +100,7 @@ header h3 {
     width: auto;
     float: left;
     margin-right: 1rem;
+    border-radius: 10px;
 }
 
 .preparation-div {
@@ -98,49 +131,112 @@ display: flex;
     border: none;
 }
 
+.name-el {
+    font-weight: 900;
+    font-size: 1.5rem;
+}
+
 .name-el::first-letter {
     text-transform: capitalize;
 
+
 }
 
+.sauce-name {
+    font-weight: 900;
+    font-size: 1.3rem;
+}
 #sauce-div {
     display: flex;
     flex-wrap: wrap;
     height: 90%;
-    width: 50vw;;
-    border: 10px solid  rgba(143, 189, 202, 0.438);
+    border: 3px solid  var(--green) ;
     border-radius: 50px;
     overflow: scroll;
-    max-width: 350px;
+    min-width: 20%;
+    max-width: 30%;
+    position: absolute;
+    top: 5.5%;
+    left: 45%;
+    margin: auto;
+    background-color: rgba(223, 223, 223, 0.5);
+    padding-bottom: 5%;
 }
 
-#sauce-div::-webkit-scrollbar {
-    display: none;
+#sauce-div > button {
+    padding-top: 15px;
 }
 
 .single-sauce-div {
-    margin: 1rem;;
-    padding: 1rem;
-    background-color: rgba(250, 240, 225, 0.424);
-    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+    margin: 3%;
+    padding: 5%;
+    background-color: rgba(250, 240, 225, 0.9);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
+    border-radius: 10%;
 }
 
 .batch-tips-div{
-    margin: 1rem;
-    padding: 1rem;
-    max-width: 350px;
+    margin: 1%;
+    padding: 3%;
+
 
 }
 .tools-and-tips-div {
     text-align: left;
-    height: 90%;
-    width: 50vw; 
+    height: 80%;
+    min-width: 20%;
+    max-width: 30%;
     overflow: scroll;
-    margin-left: 20px;
+    margin: auto;
+    padding: auto;
+    padding-bottom: 5%;
+    position: absolute;
+    left: 80%;
+    top: 15%;
+    border: 3px solid  var(--green) ;
+    border-radius: 50px;
+    background-color: rgba(223, 223, 223, 0.5);
     
 }
 
 .tools-and-tips-div > h1, h2, h3
 {
-    margin: 1rem;
+    margin: 7%;
+    color: var(--green)
 }
+
+.tools-tips-header {
+    font-weight: 900;
+    font-size: 1.3rem;
+    text-align: center;
+    background-color: rgba(223, 223, 223, 0.6);
+    border-radius: 10px;
+}
+
+.single-toolTip-container {
+    margin: 4%;
+    padding: 4%;
+    background-color: rgba(250, 240, 225, 0.9);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
+    border-radius: 10%;
+}
+.single-toolTip-container > h3 {
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+
+.equipment-div {
+    justify-content: center;
+    text-align: center;
+    margin: 5%;
+    padding: 4%;
+    background-color: rgba(250, 240, 225, 0.9);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
+    border-radius: 10px;
+}
+
+.equipment-div > h3 {
+    font-weight: 600;
+    font-size: 1.3rem;
+}
+
