--- a/home/homeStyle.css
+++ b/home/homeStyle.css
@@ -118,7 +118,21 @@ button:hover {
   box-shadow: 1px 1px 4px grey;
   cursor: pointer;
 }
-input {
+/* input {
   height: 1.5rem;
   border-radius: 5px;
+} */
+input[type=name] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid var(--onyx);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none
+}
+
+input[type=name]:focus {
+  border: 3px solid var(--carrot);
 }
