--- a/about/about.css
+++ b/about/about.css
@@ -8,7 +8,7 @@ body {
 .about-container {
     width: 50%;
     display: grid;
-    grid-template-rows: 1fr 3fr 3fr 3fr 3fr;
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
     margin: 0 auto;
     border: 1px white solid;
     background-color: rgba(255, 255, 255, .6);
@@ -43,4 +43,17 @@ p {
 .about-container h1 {
     text-align: center;
     font-size: 2rem;
+}
+.about-container h2 {
+    font-size: 1.1rem;
+    margin-bottom: 5px;
+}
+.bold {
+    font-weight: 700;
+}
+h2 {
+    font-family: var(--mainfont);
+}
+h3 {
+    text-align: center;
 }
