--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -9,13 +9,22 @@ main {
     background-attachment: fixed;
     height:100vh;
     background-image: url('../assets/sauce-page.jpg');
-    background-size: 300px 300px;
+    background-size: contain;
+    /* background-size: 300px 300px; */
 }
 
 main::-webkit-scrollbar {
     display: none;
 }
 
+header {
+    position: fixed;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    background-color: white;
+    width: 100%;
+    border-bottom: 5px solid #64AB20;
+}
 header h1,
 header h3 {
     margin:0;
@@ -25,8 +34,8 @@ button {
     background: linear-gradient(#f1c787, #f18f01);
     color: #ffffff;
     border: none;
-    font-size: 16px;
-    padding: 10px 20px;
+    font-size: 1rem;
+    padding: .8rem 1rem;
     border-radius: 6px;
     cursor: pointer;
     }
@@ -35,6 +44,9 @@ button:hover {
     color: #f4f4f4;
     background: linear-gradient(#9ed2e9, #006e90);
 }
+button:focus {
+    outline: 0;
+}
 
 .main-section {
     display: flex;
@@ -42,55 +54,49 @@ button:hover {
     height: 100vh;
     margin: auto;
     background-color: transparent;
-    padding: auto;
     position: relative;
     background-attachment: fixed;
 }
 
 .calendar-button-div {
-    
-    
-    
     justify-content: flex-end;
     align-items: center;
-    
-    
 }
 
 #calendar-button {
     position: absolute;
     left: 84%;
-    top: 8%;
+    top: 12%;
 }
 
 #batch-recipe-container-div {
-    margin-right: 10px;
     display: flex;
     flex-wrap: wrap;
-    height: 90%;
-    width: 50vw;; 
+    height: 84%;
     overflow: scroll;
     scrollbar-color: none;
     min-width: 30%;
     max-width: 40%;
     border: 3px solid  var(--green) ;
-    border-radius: 50px;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;
     position: absolute;
     left: 1%;
-    top: 5.5%;
+    top: 13%;
     background-color: rgba(223, 223, 223, 0.5);
     padding-bottom: 5%;
 }
 
-
+#batch-recipe-container-div::-webkit-scrollbar {
+    display: none;
+}
 
 .single-recipe-div {
     height: auto;
     width: 50vw;
     min-height: 250px;
-    padding: 1rem;
-    margin: 1rem;
-    border-radius: 10px;
+    padding: 3%;
+    margin: 2%;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;
     background-color: rgba(250, 240, 225, 0.9);
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
 }
@@ -99,24 +105,26 @@ button:hover {
     height: 150px;
     width: auto;
     float: left;
-    margin-right: 1rem;
+    margin-right: 3%;
+    margin-bottom: 3%;
     border-radius: 10px;
 }
 
 .preparation-div {
     height:auto;
     width: auto;
-    border: none;
-    margin: 1rem;
+    margin: 3%;
 }
+
+
 .prep-time-span{
-    margin: 1rem;
-    display: flex;
+    margin: 3%;
+    display: block;
 }
 
 .oven-temp-span {
-margin:1rem;
-display: flex;
+margin: 3%;
+display: block;
 }
 
 .ingredient-name-div {
@@ -132,6 +140,7 @@ display: flex;
 }
 
 .name-el {
+    margin-top: .5rem;
     font-weight: 900;
     font-size: 1.5rem;
 }
@@ -143,24 +152,30 @@ display: flex;
 }
 
 .sauce-name {
+    margin-top: auto;
     font-weight: 900;
     font-size: 1.3rem;
 }
 #sauce-div {
+    justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    height: 90%;
+    height: 84%;
     border: 3px solid  var(--green) ;
-    border-radius: 50px;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;
     overflow: scroll;
     min-width: 20%;
     max-width: 30%;
     position: absolute;
-    top: 5.5%;
+    top: 13%;
     left: 45%;
     margin: auto;
     background-color: rgba(223, 223, 223, 0.5);
     padding-bottom: 5%;
+}
+
+#sauce-div::-webkit-scrollbar {
+    display: none;
 }
 
 #sauce-div > button {
@@ -172,9 +187,13 @@ display: flex;
     padding: 5%;
     background-color: rgba(250, 240, 225, 0.9);
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
-    border-radius: 10%;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;
 }
 
+.sauce-prep {
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
 .batch-tips-div{
     margin: 1%;
     padding: 3%;
@@ -183,7 +202,7 @@ display: flex;
 }
 .tools-and-tips-div {
     text-align: left;
-    height: 80%;
+    height: 78%;
     min-width: 20%;
     max-width: 30%;
     overflow: scroll;
@@ -192,11 +211,15 @@ display: flex;
     padding-bottom: 5%;
     position: absolute;
     left: 80%;
-    top: 15%;
+    top: 19%;
     border: 3px solid  var(--green) ;
-    border-radius: 50px;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;
     background-color: rgba(223, 223, 223, 0.5);
     
+}
+
+.tools-and-tips-div::-webkit-scrollbar {
+    display: none;
 }
 
 .tools-and-tips-div > h1, h2, h3
@@ -206,11 +229,14 @@ display: flex;
 }
 
 .tools-tips-header {
+    color: var(--green);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color:  rgba(72, 197, 82, 0.644);
+    -webkit-text-stroke: inset; 
     font-weight: 900;
-    font-size: 1.3rem;
+    font-size: 2rem;
     text-align: center;
-    background-color: rgba(223, 223, 223, 0.6);
-    border-radius: 10px;
+    line-height: 2rem;
 }
 
 .single-toolTip-container {
@@ -218,7 +244,7 @@ display: flex;
     padding: 4%;
     background-color: rgba(250, 240, 225, 0.9);
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
-    border-radius: 10%;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;
 }
 .single-toolTip-container > h3 {
     font-weight: 600;
@@ -232,7 +258,7 @@ display: flex;
     padding: 4%;
     background-color: rgba(250, 240, 225, 0.9);
     box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.2) 0px 24px 80px;
-    border-radius: 10px;
+    border-radius: 2rem 0.5rem 2rem 0.5rem;;
 }
 
 .equipment-div > h3 {
