--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -24,10 +24,12 @@ header {
     background-color: white;
     width: 100%;
     border-bottom: 5px solid #64AB20;
+    z-index: 1;
 }
 header h1,
 header h3 {
     margin:0;
+    z-index: 2;
 }
 
 button {
