add round border to sauce page and update cal page

--- a/calendar/calStyle.css
+++ b/calendar/calStyle.css
@@ -7,18 +7,27 @@ body {
 }
 
 header {
-  background-color: white;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 5px;
+margin-bottom: 5px;
+background-color: white;
+width: 100%;
+border-bottom: 5px solid #64ab20;
 }
+
 
 #welcome {
   text-align: center;
   font-weight: bold;
   margin-bottom: 3rem;
   margin-top:  2rem;
-  font-size: 1.75rem;
-  font-style: italic;
+  font-size: 1.55rem;
+  /* font-style: italic; */
   max-width: 600px;
   height: 3rem;
+  color: var(--green);
 }
 
 .calendar-container, .menu-container {
@@ -83,7 +92,7 @@ button {
   border-radius: 2rem 0 0 0;
   top: -10px;
 
-}
+}   
 
 .rendered-recipe-step {
   width: 80%;
@@ -131,6 +140,12 @@ section {
   padding: 0px;
 }
 
+p {
+  margin-top: 25px;
+  font-family: var(--mainfont);
+  color: var(--onyx);
+}
+
 .step-container {
   display: flex;
   align-items: center;
@@ -163,4 +178,27 @@ section {
 
 #spacer-div {
   height: 3rem;
+}
+
+.btn {
+  background: linear-gradient(#f1c787, #f18f01);
+  color: #ffffff;
+  border: none;
+  font-size: 16px;
+  padding: 10px 20px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: #f4f4f4;
+  background: linear-gradient(#9ed2e9, #006e90);
+}
+
+.btn:focus {
+  outline: 0;
+}
+
+img {
+  cursor: pointer;
 }
