--- a/sauce/sauceStyle.css
+++ b/sauce/sauceStyle.css
@@ -15,9 +15,8 @@ body {
   width: 450px;
   border: solid 2px var(--green);
   text-align: center;
-  border-radius: 5px;
+  border-radius: 2rem 0.5rem 2rem 0.5rem;
   margin: 4px;
-  box-shadow: 1px 2px 4px var(--sapphire);
   background-color: white;
 }
 
