--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -10,7 +10,6 @@ main {
     height:100vh;
     background-image: url('../assets/sauce-page.jpg');
     background-size: contain;
-    /* background-size: 300px 300px; */
 }
 
 main::-webkit-scrollbar {
@@ -19,19 +18,31 @@ main::-webkit-scrollbar {
 
 header {
     position: fixed;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    background-color: white;
+    padding-top: 0.5%;
+    padding-bottom: 0.8%;
+    background-color:  #64AB20;
     width: 100%;
-    border-bottom: 5px solid #64AB20;
+    border-bottom: 1px solid var(--green);
     z-index: 1;
 }
 header h1,
 header h3 {
+    color: white;
     margin:0;
     z-index: 2;
 }
 
+.message-h2 {
+    color: white;
+    margin: 0;
+    font-size: 2.8rem;
+    font-style: unset;
+}
+
+nav a {
+    color: white;
+}
+    
 button {
     background: linear-gradient(#f1c787, #f18f01);
     color: #ffffff;
@@ -68,6 +79,17 @@ button:focus {
 #calendar-button {
     position: absolute;
     left: 84%;
+    top: 12%;
+}
+
+.shopping-list-button-div{
+    justify-content: flex-end;
+    align-items: center;
+}
+
+#shopping-list-button{
+    position: absolute;
+    left: 52%;
     top: 12%;
 }
 
@@ -162,14 +184,14 @@ display: block;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    height: 84%;
+    height: 78%;
     border: 3px solid  var(--green) ;
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     overflow: scroll;
     min-width: 20%;
     max-width: 30%;
     position: absolute;
-    top: 13%;
+    top: 19%;
     left: 45%;
     margin: auto;
     background-color: rgba(223, 223, 223, 0.5);
