--- a/home/homeStyle.css
+++ b/home/homeStyle.css
@@ -4,6 +4,7 @@
   padding: 0;
 }
 body {
+  height: 100%;
   background: linear-gradient(#9ed2e9, #006e90);
   background-image: url('../assets/home-background.jpg');
   background-size: cover;
@@ -50,6 +51,7 @@ h3 {
   border-radius: 2rem .5rem 2rem .5rem;
   box-shadow: px 1px 5px grey;
 }
+
 .user-entry h2 {
   font-family: var(--mainfont);
   font-weight: 700;
@@ -76,7 +78,7 @@ form .drop-down {
 }
 input {
   background-color: rgba(255, 255, 255, 0.1);
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 .name-input {
   margin-bottom: 15px;
@@ -131,14 +133,15 @@ footer {
   border-radius: 5px;
 } */
 input[type='name'] {
-  width: 100%;
+  width: 60%;
   padding: 12px 20px;
-  margin: 8px 0;
   box-sizing: border-box;
   border: 3px solid var(--onyx);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
+  text-align: center;
+
 }
 
 input[type='name']:focus {
@@ -146,19 +149,30 @@ input[type='name']:focus {
 }
 
 ul>li {
-  margin-bottom: 1.25rem;
-  font-size: 1rem;
-  width: 80%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: .5rem;
+  font-size: .75rem;
+  max-width: 70%;
 
 }
 
-ul>span {
-  font-size: 3rem;
+.emoji {
+  font-size: 2rem;
+  margin-right: 1rem;
 }
 
 ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
+  justify-content: center;
+}
+
+main {
+  height: 100%;
+}
+
+section {
+  margin-bottom: 100px;
 }
