--- a/about/about.css
+++ b/about/about.css
@@ -35,7 +35,7 @@ nav a {
   border: 1px white solid;
   background-color: rgba(255, 255, 255, 0.6);
   padding: 20px;
-  border-radius: 15px;
+  border-radius: 2rem .5rem 2rem .5rem;
   box-shadow: 1px 1px 5px grey;
 }
 .bio {
@@ -77,8 +77,19 @@ h1 {
   color: var(--green);
 }
 h2 {
-  font-family: var(--mainfont);
-}
-h3 {
   text-align: center;
+}
+
+h3 {
+    text-align: center;
+    font-style: italic;
+    font-size: 1.25rem;
+  }
+
+div>h2 {
+  text-align: left;
+}
+
+.bottom-buffer {
+  height: 20%;
 }
