--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -35,8 +35,9 @@ header h3 {
 .message-h2 {
     color: white;
     margin: 0;
-    font-size: 2.8rem;
+    font-size: 1.75rem;
     font-style: unset;
+    line-height: 1.75rem;
 }
 
 nav a {
@@ -291,5 +292,5 @@ display: block;
 }
 
 .spacer-div {
-    height: 85px;
+    height: 100px;
 }
