--- a/calendar/calStyle.css
+++ b/calendar/calStyle.css
@@ -4,17 +4,23 @@ body {
 --carrot: #F18F01;
 --lightblue: #ADCAD6;
 --onyx: #393E41;
+background-image: url('../assets/home-background.jpg');
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+background-attachment: fixed;
 }
 
 header {
   background-color: #64ab20;
-  border-bottom: 1px solid var(--green);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px;
-  margin-bottom: 5px;
-  width: 100%;  
+  padding-bottom: 10px;
+  width: 100%;
+  margin-bottom: 0px;  
+  border-bottom: solid 3px var(--green);
 }
 
 
@@ -30,9 +36,12 @@ header {
   margin-top:  2rem;
   font-size: 1.55rem;
   /* font-style: italic; */
-  max-width: 900px;
-  height: 3rem;
-  color: var(--green);
+  width: 80%;
+  color: var(--sapphire);
+  background-color: rgba(255, 255, 255, .7);
+  padding: 10px;
+  border: 3px solid var(--sapphire);
+  border-radius: 2rem .5rem 2rem .5rem;
 }
 
 #icon-msg {
@@ -140,9 +149,12 @@ button {
 /* close button */
 #x-btn {
   position: absolute;
-  top: -90px;
-  right: -30px;
+  top: -75px;
+  right: -25px;
   cursor: pointer;
+  max-height: 40px;
+  max-width: 40px;
+
 }
 
 body {
@@ -184,7 +196,9 @@ p {
   width: 100%;
   height: 225px;
   top: 25px;
-  border-radius: 2rem 0 2rem 0rem;
+  border-radius: 2rem .5rem 2rem .5rem;
+  background-color: rgba(255, 255, 255, .7);
+
 }
 
 #border-div-recipe {
@@ -207,6 +221,7 @@ p {
   padding: 10px 20px;
   border-radius: 6px;
   cursor: pointer;
+  margin-top: 20px;
  
 }
 
@@ -221,6 +236,7 @@ p {
 
 #icon-message {
   margin-top: 40px;
+  font-style: italic;
 }
 
 img {
