--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -3,13 +3,11 @@ body {
     box-sizing: content-box;
     color: var(--onyx);
     line-height: 1.5rem;
-}
-
-main {
     background-attachment: fixed;
     height:100vh;
     background-image: url('../assets/sauce-page.jpg');
     background-size: contain;
+
 }
 
 main::-webkit-scrollbar {
@@ -34,10 +32,11 @@ header h3 {
 
 .message-h2 {
     color: white;
-    margin: 0;
+    margin: 6px;
     font-size: 1.75rem;
     font-style: unset;
     line-height: 1.75rem;
+    width: 100%;
 }
 
 nav a {
@@ -72,26 +71,23 @@ button:focus {
     background-attachment: fixed;
 }
 
-.calendar-button-div {
-    justify-content: flex-end;
-    align-items: center;
-}
+
 
 #calendar-button {
-    position: absolute;
-    left: 80%;
-    top: 3%;
+    justify-content:right;
+    margin-top: 4%;
+    font-size: 1.5rem;
+    
 }
 
 .shopping-list-button-div{
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
+    width: auto;
 }
 
 #shopping-list-button{
-    position: absolute;
-    left: 43%;
-    top: 3%;
+    font-size: 1rem;
 }
 
 #batch-recipe-container-div {
@@ -106,7 +102,7 @@ button:focus {
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     position: absolute;
     left: 1%;
-    top: 13%;
+    top: 7%;
     background-color: rgba(223, 223, 223, 0.5);
     padding-top: 2%;
     padding-bottom: 5%;
@@ -184,19 +180,20 @@ font-weight: 550;
     font-weight: 900;
     font-size: 1.3rem;
 }
+
 #sauce-div {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    height: 73%;
+    height: 78%;
     border: 3px solid  var(--green) ;
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     overflow: scroll;
     min-width: 20%;
     max-width: 30%;
     position: absolute;
-    top: 13%;
-    left: 45%;
+    top: 9%;
+    left: 45.5%;
     margin: auto;
     background-color: rgba(223, 223, 223, 0.5);
     padding-top: 2%;
@@ -240,7 +237,7 @@ font-weight: 550;
     padding-bottom: 5%;
     position: absolute;
     left: 80%;
-    top: 19%;
+    top: 9%;
     border: 3px solid  var(--green) ;
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     background-color: rgba(223, 223, 223, 0.5);
@@ -296,9 +293,11 @@ font-weight: 550;
 }
 
 .message-div {
+position: inherit;
+width: 100vw;
 margin-top: 60px;
-padding-top: 10px;
-background-color: darkgray;
-height: 55px;
+padding-top: 13px;
+background-color: var(--green);
+height: 60px;
 text-align: center;
 }
