--- a/sauce/sauceStyle.css
+++ b/sauce/sauceStyle.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 0;
+  margin: 0;
   background-image: url('../assets/sauce-page.jpg');
   background-size: 600px 600px;
   overflow-x: hidden;
