--- a/calendar/calStyle.css
+++ b/calendar/calStyle.css
@@ -42,6 +42,7 @@ header {
   padding: 10px;
   border: 3px solid var(--sapphire);
   border-radius: 2rem .5rem 2rem .5rem;
+  max-width: 850px;
 }
 
 #icon-msg {
@@ -58,6 +59,7 @@ margin-top: 45px;
   width: 80%;
   justify-content: space-around;
   position: relative;
+  max-width: 850px;
 }
 
 /* weekday headers */
