--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -64,7 +64,7 @@ button:focus {
 .main-section {
     display: flex;
     width: 90vw;
-    height: 100vh;
+    height: 80vh;
     margin: auto;
     background-color: transparent;
     position: relative;
@@ -77,6 +77,7 @@ button:focus {
     justify-content:right;
     margin-top: 2%;
     font-size: 1.5rem;
+    margin-right: 51%;
     
 }
 
@@ -93,7 +94,7 @@ button:focus {
 #batch-recipe-container-div {
     display: flex;
     flex-wrap: wrap;
-    height: 84%;
+    height: 89%;
     overflow: scroll;
     scrollbar-color: none;
     min-width: 30%;
@@ -102,7 +103,7 @@ button:focus {
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     position: absolute;
     left: 1%;
-    top: 3%;
+    top: 4%;
     background-color: rgba(223, 223, 223, 0.5);
     padding-top: 2%;
     padding-bottom: 5%;
@@ -185,14 +186,14 @@ font-weight: 550;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    height: 83%;
+    height: 100%;
     border: 3px solid  var(--green) ;
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     overflow: scroll;
     min-width: 20%;
     max-width: 30%;
     position: absolute;
-    top: 4%;
+    top: -7%;
     left: 45.5%;
     margin: auto;
     background-color: rgba(223, 223, 223, 0.5);
@@ -228,7 +229,7 @@ font-weight: 550;
 }
 .tools-and-tips-div {
     text-align: left;
-    height: 83%;
+    height: 100%;
     min-width: 20%;
     max-width: 30%;
     overflow: scroll;
@@ -237,7 +238,7 @@ font-weight: 550;
     padding-bottom: 5%;
     position: absolute;
     left: 80%;
-    top: 4%;
+    top: -7%;
     border: 3px solid  var(--green) ;
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     background-color: rgba(223, 223, 223, 0.5);
