--- a/batch/batchStyle.css
+++ b/batch/batchStyle.css
@@ -7,6 +7,8 @@ body {
     height:100vh;
     background-image: url('../assets/sauce-page.jpg');
     background-size: contain;
+    overflow: hidden;
+    overflow-x: hidden;
 
 }
 
@@ -94,7 +96,7 @@ button:focus {
 #batch-recipe-container-div {
     display: flex;
     flex-wrap: wrap;
-    height: 89%;
+    height: 91%;
     overflow: scroll;
     scrollbar-color: none;
     min-width: 30%;
@@ -193,7 +195,7 @@ font-weight: 550;
     min-width: 20%;
     max-width: 30%;
     position: absolute;
-    top: -7%;
+    top: -5%;
     left: 45.5%;
     margin: auto;
     background-color: rgba(223, 223, 223, 0.5);
@@ -238,7 +240,7 @@ font-weight: 550;
     padding-bottom: 5%;
     position: absolute;
     left: 80%;
-    top: -7%;
+    top: -5%;
     border: 3px solid  var(--green) ;
     border-radius: 2rem 0.5rem 2rem 0.5rem;
     background-color: rgba(223, 223, 223, 0.5);
